@@ -5,7 +5,7 @@ ENV_CROSS_COMPILE:=$(CROSS_COMPILE)
 
 VERSION = 1
 PATCHLEVEL = 2
-SUBLEVEL = 4
+SUBLEVEL = 5
 #EXTRAVERSION = -rc3
 #NAME=Zonked Quokka
 
